--- a/worker/Jenkinsfile
+++ b/worker/Jenkinsfile
@@ -19,18 +19,19 @@ pipeline {
  sh 'mvn clean test'
  }
  }
- }
+  
  stage("package"){
  steps{
  echo 'Packaging worker app'
  dir('worker'){
- sh 'mvn package'
+ sh 'mvn package -DskipTests'
  }
  }
  }
  }
  post{
  always{
+ archiveArtifacts artifacts: '**/target/*.jar', fingerprint: true
  echo 'Building multibranch pipeline for worker is completed..'
  }
  }
